<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.iesnervion.apol.ejercicio322.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/textView"
        android:layout_alignParentStart="true"
        android:textSize="20dp"
        android:background="@color/bk_et"/>

    <Button
        android:text="@string/btEqual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btEqual"
        android:layout_row="4"
        android:layout_column="1"
        android:onClick="onClick"
        android:layout_above="@+id/gridLayout"
        android:layout_alignEnd="@+id/gridLayout" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/gridLayout"
        android:layout_alignParentBottom="true">

        <Button
            android:text="@string/suma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btSuma"
            android:layout_row="0"
            android:layout_column="1"
            android:onClick="onClick"/>

        <Button
            android:text="@string/bt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt1"
            android:layout_row="0"
            android:layout_column="2"
            android:onClick="onClick"/>

        <Button
            android:text="@string/bt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt2"
            android:layout_row="0"
            android:layout_column="3"
            android:onClick="onClick"/>

        <Button
            android:text="@string/bt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt3"
            android:layout_row="0"
            android:layout_column="4"
            android:onClick="onClick"/>

        <Button
            android:text="@string/bt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt4"
            android:layout_row="1"
            android:layout_column="2"
            android:onClick="onClick" />

        <Button
            android:text="@string/resta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btResta"
            android:layout_row="1"
            android:layout_column="1"
            android:onClick="onClick"/>

        <Button
            android:text="@string/bt5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt5"
            android:layout_row="1"
            android:layout_column="3"
            android:onClick="onClick"/>

        <Button
            android:text="@string/bt6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt6"
            android:layout_row="1"
            android:layout_column="4"
            android:onClick="onClick"/>

        <Button
            android:text="@string/divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btDivide"
            android:layout_row="2"
            android:layout_column="1"
            android:onClick="onClick"/>

        <Button
            android:text="@string/bt7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt7"
            android:layout_row="2"
            android:layout_column="2"
            android:onClick="onClick"/>

        <Button
            android:text="@string/bt8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt8"
            android:layout_row="2"
            android:layout_column="3"
            android:onClick="onClick"/>

        <Button
            android:text="@string/bt9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt9"
            android:layout_row="2"
            android:layout_column="4"
            android:onClick="onClick"/>

        <Button
            android:text="@string/bt0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt0"
            android:layout_row="3"
            android:layout_column="3"
            android:onClick="onClick"/>

        <Button
            android:text="@string/btPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btPoint"
            android:layout_row="3"
            android:layout_column="2"
            android:onClick="onClick"/>

        <Button
            android:text="@string/btDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btDelete"
            android:layout_row="3"
            android:layout_column="4"
            android:onClick="onClick"/>

        <Button
            android:text="@string/btMultiplica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btMultiplica"
            android:layout_row="3"
            android:layout_column="1"
            android:onClick="onClick"/>
    </GridLayout>



</RelativeLayout>
